# inkventory

./: .gitignore  README.md
backend/: pyproject.toml
frontend/: package-lock.json  package.json
handlers/: webhook.py
tests/integration/aux/: strategies.py
